syntax = "proto3";

import "google/protobuf/timestamp.proto";

package relay;
option go_package = "github.com/modelgate/modelgate/pkg/proto/model/relay";

message RelayHourlyUsage {
  int64 id = 1;
  google.protobuf.Timestamp time = 2;
  string provider_code = 3;
  int64 total_request = 4;
  int64 total_success = 5;
  int64 total_failed = 6;
  int64 total_point = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}